[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyservicenow"
authors = [{name = "michaeldcanady"}]
readme = "Readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "black==22.12.0",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "charset-normalizer==2.1.1",
    "click==8.1.3",
    "colorama==0.4.6",
    "cryptography==38.0.4",
    "idna==3.4",
    "mypy-extensions==0.4.3",
    "pathspec==0.10.3",
    "platformdirs==2.6.0",
    "pycparser==2.21",
    "pyrestsdk==0.2.1",
    "pyspnego==0.7.0",
    "requests==2.28.1",
    "requests-kerberos==0.14.0",
    "StrEnum==0.4.9",
    "tomli==2.0.1",
    "urllib3==1.26.13",
]

[project.urls]
homepage = "https://github.com/michaeldcanady/pyservicenow#readme"
repository = "https://github.com/michaeldcanady/pyservicenow"

[tool.flit.module]
name = "pyservicenow"

[tool.mypy]
warn_unused_configs = true
files = "pyservicenow"
ignore_missing_imports = true

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
column_limit = 100